Test now waits for all browser windows to login to google and then hits the gene page all at once.  Added some robustness improvements, expanded the size of the gene list.